--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,24 @@
 {
   "manifest_version": 3,
   "name": "Copy Project Details",
-  "version": "1.0",
-  "description": "Copies project title and description",
+  "version": "1.1", // Incremented version
+  "description": "Copies project title, description, and skills via popup or context menu.",
   "permissions": [
     "activeTab",
     "clipboardWrite",
-    "scripting"
+    "scripting",
+    "contextMenus" // <-- Added permission
   ],
+  "background": {
+    "service_worker": "background.js" // <-- Added service worker
+  },
   "action": {
     "default_title": "Copy Details",
     "default_popup": "popup.html"
+  },
+  "icons": { // Optional: Add icons for better presentation
+    "16": "images/icon16.png",
+    "48": "images/icon48.png",
+    "128": "images/icon128.png"
   }
 }
